@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-06-18T00:32:30Z",
+  "timestamp" : "2022-06-18T08:07:13Z",
   "count_outdated" : 1565,
   "uniques_outdated" : 427,
   "count" : 1600,
-  "uniques" : 445,
+  "uniques" : 446,
   "clones" : [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
