@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-06-04T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-06-17T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-18T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
