@@ -1,3 +1,10 @@
+2022-06-18T08:07:13Z:
+* notice: last 14d: unq all: 5 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 427 1565 / 445 1600
+* notice: next accum: outdated-unq outdated-all / unq all: 427 1565 / 446 1600
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-06-04 2022-06-18]
+
 2022-06-18T00:32:30Z:
 * notice: last 14d: unq all: 5 35
 * notice: prev accum: outdated-unq outdated-all / unq all: 426 1563 / 445 1599
